testdata/baselines/reference/submodule/conformance/nodeModulesConditionalPackageExports(module=node18).errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
index.cts(2,22): error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
index.cts(3,22): error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
index.cts(4,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
index.mts(2,22): error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
index.mts(3,22): error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
index.mts(4,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
index.ts(2,22): error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
index.ts(3,22): error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
index.ts(4,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
==== index.ts (3 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
    import * as mjsi from "inner/b";
    import * as typei from "inner";
    import * as ts from "inner/types";
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
    ts.mjsSource;
==== index.mts (3 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
    import * as mjsi from "inner/b";
    import * as typei from "inner";
    import * as ts from "inner/types";
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
    ts.mjsSource;
==== index.cts (3 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/cjs' or its corresponding type declarations.
    import * as mjs from "package/mjs";
                         ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'package/mjs' or its corresponding type declarations.
    import * as type from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
    import * as mjsi from "inner/b";
    import * as typei from "inner";
    import * as ts from "inner/types";
    cjsi.cjsSource;
    mjsi.cjsSource;
    typei.implicitCjsSource;
    ts.cjsSource;
==== node_modules/inner/index.d.ts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
    import * as mjs from "inner/b";
    import * as type from "inner";
    import * as ts from "inner/types";
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const implicitCjsSource = true;
==== node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/a";
    import * as mjs from "inner/b";
    import * as type from "inner";
    import * as ts from "inner/types";
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const mjsSource = true;
==== node_modules/inner/index.d.cts (0 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
    import * as mjs from "inner/b";
    import * as type from "inner";
    import * as ts from "inner/types";
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const cjsSource = true;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./a": {
                "require": "./index.cjs",
                "node": "./index.mjs"
            },
            "./b": {
                "import": "./index.mjs",
                "node": "./index.cjs"
            },
            ".": {
                "import": "./index.mjs",
                "node": "./index.js"
            },
            "./types": {
                "types": {
                    "import": "./index.d.mts",
                    "require": "./index.d.cts"
                },
                "node": {
                    "import": "./index.mjs",
                    "require": "./index.cjs"
                }
            }
        }
    }
    